crates/swc_ecma_parser/tests/test262-error-references/fail/54b72e05f42d7802.js.stderr
error: Parenthesized expression cannot be empty
 --> $DIR/tests/test262-parser/fail/54b72e05f42d7802.js:1:5
  |
1 | 1 + ()
  |     ^^

